# dpmn-appmetrica-logs

./: README.md  pyproject.toml
dpmn_appmetrica_logs/: __init__.py  client.py
